--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,13 +1,17 @@
 *{
     outline: none;
     font-family: acumin-pro,sans-serif;
-    font-size: 102%;
+    font-size: 103%;
     font-style: normal;
   }
   .navbar-brand img{
-      width: 30%;
+      width: 28%;
   }
 
   .navbar{
       background-color: #cff7f2;
+  }
+
+  footer img{
+      width: 45%;
   }
