--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,13 +1,74 @@
 *{
-    outline: none;
-    font-family: acumin-pro,sans-serif;
-    font-size: 102%;
-    font-style: normal;
-  }
-  .navbar-brand img{
-      width: 30%;
-  }
+outline: none;
+font-family: acumin-pro,sans-serif;
+font-size: 103%;
+font-style: normal;
+}
 
-  .navbar{
-      background-color: #cff7f2;
-  }
+.navbar-brand{
+    width: 200px;
+}
+
+.navbar-brand img{
+    width: 100%;
+}
+
+.navbar{
+    background-color: #cff7f2;
+}
+
+footer img{
+    width: 90%;
+}
+
+.newsletter h3 {
+    text-align: center;
+    margin-bottom: 10%;
+    font-family: Caroline;
+    font-size: 400%;
+    font-style: normal;
+}
+
+.newsletter{
+    margin-bottom: 5%;
+    width: 30%;
+    margin-left: 35%;
+}
+
+
+.formulario {
+    margin-top: 10%;
+    margin-left: 5%;
+    padding-top: 5%;
+
+}
+
+.formulario2{
+    margin-top: 10%;
+    margin-left: 5%;
+    padding-bottom: 5%; 
+}
+
+.form{
+    margin-top: 5%;
+    margin-left: 60%;
+    max-width: 400px;
+    background-color: #ffd8d8;
+    border-radius: 15px;
+    box-shadow: 4px 4px 2px #e8d6e4; 
+}
+
+.btn{
+    margin-bottom: 5%;
+}
+
+.btn-secondary{
+    background-color: #2b313a;
+    border-color: #2b313a;
+
+}
+
+.btn-primary{
+    margin-top: 3%;
+    margin-left: 80%;
+}
